# AI-Trading-Agent

./: .env.example  .gitignore  LICENSE-NOTICE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/agent/: package.json
apps/agent/src/: config.ts  hash.ts  index.ts  paths.ts  types.ts
apps/agent/src/api/: server.ts
apps/agent/src/cmc/: normalizeSignals.ts  skillHubClient.ts
apps/agent/src/demo/: dryRun.ts  replay.ts
apps/agent/src/flash/: opportunityEngine.ts
apps/agent/src/ledger/: schema.ts  sqlite.ts
apps/agent/src/live/: abis.ts  broadcastOneShot.ts  compiler.ts  deployContracts.ts  disableBroadcast.ts  env.ts  executionWorker.ts  fundHotWallet.ts  rpc.ts  v2Discovery.ts
apps/agent/tests/: contractsCompile.test.ts  decision.test.ts  opportunity.test.ts  redact.test.ts  signal.test.ts  twak.test.ts  v2Discovery.test.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  styles.css
artifacts/: demo-run-latest.json
contracts/: package.json  tsconfig.json
contracts/contracts/: FlashPoolBalancer.sol  MockFlashRouteExecutor.sol  V2TwoLegFlashExecutor.sol
contracts/tests/: flashLoanModel.test.ts
docs/: architecture.md  cmc-mcp-phase1.md  demo-script.md  judging-strategy.md  public-showcase.md  risk-model.md  security.md  source-audit.md  sponsor-integration-matrix.md  submission-checklist.md
services/bnb-agent/: .env.example  README.md  agent_server.py  manifest.py  pyproject.toml  register_agent.py
services/bnb-agent/tests/: test_manifest.py
(+8 files in other folders)
